--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ nav ul li {
     color: #ffffff; /* Font Color */
     font-weight: bold;
     font-size: 1.5rem;
+    transition: filter 0.3s ease;
     filter: drop-shadow(0px 0px 5px #ababab);
     &:hover {
         filter: drop-shadow(0px 0px 7px #d6d6d6);
@@ -76,16 +77,15 @@ nav ul li a {
     text-decoration: none;
     color: #ffffff; /* Font Color */
     font-weight: bold;
-    transition: color 0.3s ease, transform 0.3s ease;
+    transition: filter 0.3s ease, transform 0.3s ease;
     font-size: 1rem;
     padding: 10px 15px;
     border-radius: 5px;
 }
 
 nav ul li a:hover {
-    color: #2dba4e; /* Accent Color */
-    background-color: rgba(255, 255, 255, 0.2); /* Light background on hover */
-    transform: translateY(-2px); /* Slight lift effect */
+    filter: drop-shadow(0px 0px 7px #d6d6d6);
+    transform: translateY(-5px); /* Slight lift effect */
 }
 
 /* Section styles */
