--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ nav ul li {
     color: #ffffff; /* Font Color */
     font-weight: bold;
     font-size: 1.5rem;
-    transition: filter 0.3s ease;
+    transition: filter 0.3s ease, transform 0.3s ease;
     filter: drop-shadow(0px 0px 5px #ababab);
     &:hover {
         filter: drop-shadow(0px 0px 7px #d6d6d6);
