--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,9 @@ nav ul {
 nav ul li {
     margin: 0 15px;
     float: right;
+    &:hover {
+        transform: translateY(-5px); /* Slight lift effect */
+    }
 }
 
 .logo {
@@ -85,7 +88,6 @@ nav ul li a {
 
 nav ul li a:hover {
     filter: drop-shadow(0px 0px 7px #d6d6d6);
-    transform: translateY(-5px); /* Slight lift effect */
 }
 
 /* Section styles */
