--- a/styles.css
+++ b/styles.css
@@ -58,9 +58,6 @@ nav ul {
 nav ul li {
     margin: 0 15px;
     float: right;
-    &:hover {
-        transform: translateY(-5px); /* Slight lift effect */
-    }
 }
 
 .logo {
@@ -87,6 +84,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
+    transform: translateY(-5px); /* Slight lift effect */
     filter: drop-shadow(0px 0px 7px #d6d6d6);
 }
 
@@ -100,11 +98,6 @@ h1, h2 {
     color: #ffffff; /* Font Color */
 }
 
-p {
-    font-size: 2.5rem;
-    line-height: 1.4;
-}
-
 .intro {
     padding: 20px;
     padding-left: 12%;
@@ -114,6 +107,11 @@ p {
     align-self: center;
     font-size: 45px;
     font-family: Kepler W03 Light SCd Cp;
+}
+
+.intro p {
+    font-size: 2.5rem;
+    line-height: 1.4;
 }
 
 .education-cards .card, .experience-cards .card {
