--- a/styles.css
+++ b/styles.css
@@ -265,3 +265,23 @@ footer {
     background-color: rgba(0, 0, 0, 0.5);
     color: #fafbfc;
 }
+
+/* SVG Morph Effect */
+#home {
+    position: relative;
+    overflow: hidden;
+}
+
+#morph-svg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    transition: transform 1.5s ease-in-out;
+}
+
+#morph-svg path {
+    transition: d 1.5s ease-in-out;
+}
