--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body {
     height: 100%;
     object-fit: cover; /* Cover the entire background */
     object-position: center center;
+    transition: all 0.8s ease-in-out;
 }
 
 /* Navbar styles */
@@ -266,22 +267,3 @@ footer {
     color: #fafbfc;
 }
 
-/* SVG Morph Effect */
-#home {
-    position: relative;
-    overflow: hidden;
-}
-
-#morph-svg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    transition: transform 1.5s ease-in-out;
-}
-
-#morph-svg path {
-    transition: d 1.5s ease-in-out;
-}
