--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,11 @@ body {
     url("https://db.onlinewebfonts.com/t/fc13291877fa0c0e6e6d614326699903.svg#Kepler W03 Light SCd Cp")format("svg");
 }
 
+#home {
+    width: 100%;
+    height: 100%;
+}
+
 /* Background Video */
 .background-video {
     position: fixed;
