--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,11 @@ h1, h2 {
     backdrop-filter: blur(10px);
     align-self: center;
     font-family: Kepler W03 Light SCd Cp;
-    font-size: 2.5rem;
+    font-size: 2.6rem;
+}
+
+.intro p {
+    line-height: 1.40;
 }
 
 .education-cards .card, .experience-cards .card {
