--- a/styles.css
+++ b/styles.css
@@ -259,6 +259,9 @@ footer {
 }
 
 /*Education Section*/
+#education {
+    background-color: #000;
+}
 .education-container {
     display: flex;
     gap: 2rem;
@@ -271,12 +274,12 @@ footer {
 .education-item {
     padding: 1rem;
     cursor: pointer;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid #000;
     transition: background-color 0.3s ease;
 }
 
 .education-item:hover {
-    background-color: #f0f0f0;
+    background-color: #ababab;
 }
 
 .education-details {
@@ -291,7 +294,7 @@ footer {
     left: 0;
     right: 0;
     padding: 1rem;
-    background: #f9f9f9;
+    background: #d6d6d6;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 0.5rem;
     transition: opacity 0.3s ease, transform 0.3s ease;
